add versions_response and format end point to the schema
