# api_v1/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  ogrdb-api-openapi3.yaml
-#   timestamp: 2024-05-16T08:17:08+00:00
+#   timestamp: 2024-06-16T09:23:27+00:00
 
 from __future__ import annotations
 
@@ -8,10 +8,7 @@ from datetime import datetime
 from enum import Enum
 from typing import List, Optional
 
-from pydantic import BaseModel, Field, field_validator
-from pydantic.fields import FieldInfo
-
-from typing import Any, Optional, Union, get_args, get_origin, List, get_type_hints
+from pydantic import BaseModel, Field
 
 
 class Contact(BaseModel):
@@ -53,7 +50,6 @@ class GermlineSpeciesResponseItem(BaseModel):
 
 class GermlineSpeciesResponse(BaseModel):
     germline_species: List[GermlineSpeciesResponseItem]
-
 
 
 class SpeciesSubgroupType(Enum):
@@ -255,6 +251,10 @@ class UnrearrangedSequence(BaseModel):
     strand: Strand = Field(..., description='sense (+ or -)')
 
 
+class VersionsResponse(BaseModel):
+    versions: Optional[List[float]] = None
+
+
 class ErrorResponse(BaseModel):
     message: Optional[str] = Field(None, description='Detail about the error')
 
@@ -450,7 +450,7 @@ class GermlineSet(BaseModel):
         description='Unique identifier of the GermlineSet within this file, typically generated by the repository hosting the schema, for example from the underlying ID of the database record',
     )
     author: str = Field(..., description='Corresponding author')
-    lab_name: str# = Field(..., description='Department of corresponding author')
+    lab_name: str = Field(..., description='Department of corresponding author')
     lab_address: str = Field(
         ..., description='Institutional address of corresponding author'
     )
